--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@v1
       - name: Deploy
-        run: flyctl deploy --remote-only --app your-app-name
+        run: flyctl deploy --remote-only --app innovapayme
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
