--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "innovapay",
+  "name": "innovapayme",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": { "start": "node server.js" },
   "dependencies": {
     "axios": "^1.7.0",
